implemented IndexContract interfaces. no data fetching yet.
before i delve too deep, i'm switching over what i have so far to
kotlin.

- build.gradle: added google autovalue
- MainActivity: made shellWiring a final member because it needs to
  be injected now into the index component factory
- MainActivity: moved menu handling to ForecastsFragment
- Sunshine: changed ActivityInjector signature for index
- ForecastsAdapter: changed list data type to Forecast
- ForecastsFragment: injected presenter and view, bound in onResume
- IndexWiring.Injector: added ShellWiring as module
- IndexWiring: changed dummy data to List<Forecast>
- IndexWiring: added providers for view, presenter and the interfaces
- IndexWiring: made the participating classes bound to the .Injector
  instance by annotating them with @PerFeature
- list_item.xml: changed list item background style
- main.xml: added refresh menu item
- new stuff: IndexView, IndexPresenter, ic_refresh.xml

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -4,5 +4,6 @@
     android:gravity="start|center_vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    style="?android:textAppearanceListItem"
+    android:background="?attr/selectableItemBackground"
+    style="?attr/textAppearanceListItem"
     android:minHeight="?attr/listPreferredItemHeightLarge"/>
