- build.gradle: added dependencies support-v4 and preference-v7 - MainActivity: fixed injection logic, need to update the comments - MainActivity: added settings item to the menu - Solshine: added a couple of activity resources, changed worker executor   provider to cached thread pool, added shared prefs provider and   default initialization - ForecastsAdapter, IndexView, IndexPresenter: removed scope annotation - ForecastsFragment: made injected view lazy, cs changes - IndexView, IndexWiring: removed Named annotation for now, will probably   be back later - IndexWiring: added Shared internal injected object so that a presenter   instance may be shared by the two interface providers - OwmService: removed explicit thread start, now uses the worker executor   to detect timeouts - Navigator: working on switching out fragments in an activity. WIP - ShellContract: replaced Feature enum with an IntDef so they can be   put in a bundle - ShellContract.Navigation: removed quit() from the interface - ShellContract.Messaging -> .Feedback - ShellWiring: removed FragmentManager constructor arg - IndexState: pending -> isPending, made items final - fragment_forecasts.xml: moved side paddings to the list item layout - added preferences fragment and strings

--- a/solshine/src/main/res/layout/item_forecast.xml
+++ b/solshine/src/main/res/layout/item_forecast.xml
@@ -1,7 +1,9 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="left|center_vertical"
+    android:gravity="start|center_vertical"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
     android:minHeight="?attr/listPreferredItemHeightLarge"
     android:background="?attr/selectableItemBackground"
     style="?android:attr/textAppearanceLarge"
