--- a/solshine/src/main/res/layout/fragment_forecasts.xml
+++ b/solshine/src/main/res/layout/fragment_forecasts.xml
@@ -8,8 +8,8 @@
         android:id="@+id/list_forecasts"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:scrollbars="vertical"
+        android:fadeScrollbars="true"
         />
 
 </LinearLayout>
